--- a/CASACC_Mobile_App.html
+++ b/CASACC_Mobile_App.html
@@ -6,7 +6,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="theme-color" content="#0a1628">
-<title>MREA Agent OS</title>
+<title>Casa RGP Agent OS</title>
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600;700&family=DM+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
 <style>
   /* ── Reset & Base ───────────────────────────────────────────────────── */
@@ -762,7 +762,7 @@
   <div id="header">
     <div class="header-top">
       <div class="header-logo">
-        MREA
+        Casa RGP
         <span>Agent Operating System</span>
       </div>
       <div class="header-date">
@@ -2181,7 +2181,7 @@ document.getElementById('pages').insertAdjacentHTML('beforeend', `
 
   <!-- App Info -->
   <div class="card" style="text-align:center;">
-    <div style="font-family: var(--font-display); font-size:28px; color:var(--gold); font-weight:700; margin-bottom:4px;">MREA</div>
+    <div style="font-family: var(--font-display); font-size:28px; color:var(--gold); font-weight:700; margin-bottom:4px;">Casa RGP</div>
     <div style="font-size:12px; color:var(--text-dim); margin-bottom:12px;">Agent Operating System v3 · Mobile Edition</div>
     <div style="font-size:12px; color:var(--text-dim);">Based on The Millionaire Real Estate Agent by Gary Keller</div>
     <div class="divider"></div>
