--- a/MREA_Mobile_App.html
+++ b/MREA_Mobile_App.html
@@ -2133,7 +2133,7 @@ document.getElementById('pages').insertAdjacentHTML('beforeend', `
       <div style="display:flex; flex-direction:column; gap:10px;">
         <div style="display:flex; gap:10px;">
           <div style="width:24px; height:24px; border-radius:50%; background:var(--gold); color:var(--navy); font-weight:700; font-size:12px; display:flex; align-items:center; justify-content:center; flex-shrink:0;">1</div>
-          <div>Open your <strong style="color:var(--text);">MREA spreadsheet</strong> in Google Sheets on a computer</div>
+          <div>Open your <strong style="color:var(--text);">Casa RGP spreadsheet</strong> in Google Sheets on a computer</div>
         </div>
         <div style="display:flex; gap:10px;">
           <div style="width:24px; height:24px; border-radius:50%; background:var(--gold); color:var(--navy); font-weight:700; font-size:12px; display:flex; align-items:center; justify-content:center; flex-shrink:0;">2</div>
@@ -2141,7 +2141,7 @@ document.getElementById('pages').insertAdjacentHTML('beforeend', `
         </div>
         <div style="display:flex; gap:10px;">
           <div style="width:24px; height:24px; border-radius:50%; background:var(--gold); color:var(--navy); font-weight:700; font-size:12px; display:flex; align-items:center; justify-content:center; flex-shrink:0;">3</div>
-          <div><strong style="color:var(--text);">Delete all existing code</strong> in the editor and paste in the entire MREA Apps Script file</div>
+          <div><strong style="color:var(--text);">Delete all existing code</strong> in the editor and paste in the entire Casa RGP Apps Script file</div>
         </div>
         <div style="display:flex; gap:10px;">
           <div style="width:24px; height:24px; border-radius:50%; background:var(--gold); color:var(--navy); font-weight:700; font-size:12px; display:flex; align-items:center; justify-content:center; flex-shrink:0;">4</div>
